--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
   "description": "playing with react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf public/",
+    "build": "webpack",
+    "serve": "webpack-dev-server --hot --progress --colors --info",
+    "develop": "npm run clean && npm run build && npm run serve"
   },
   "author": "Alex Goldvarg",
   "license": "ISC",
-  "dependencies": {
-    "babel": "^5.8.23",
-    "babel-loader": "^6.2.0",
-    "react": "^0.14.2",
-    "react-dom": "^0.14.0"
-  },
   "devDependencies": {
-    "babel-core": "^5.8.30",
-    "babel-loader": "^5.3.2"
+    "autoprefixer": "^6.0.3",
+    "babel": "^5.8.23",
+    "babel-loader": "^5.3.2",
+    "css-loader": "^0.21.0",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "jsx-loader": "^0.13.2",
+    "postcss-loader": "^0.7.0",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
   }
 }
